# WebServer

./: .gitignore  .gitmodules  CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  README.md  WebServer.cpp  WebServer.h  config.yaml  main.cpp
include/: HttpResponse.h  ThreadPool.h  WebServer.h
src/: HttpRequest.cpp  HttpResponse.cpp  WebServer.cpp  main.cpp
statics/: index.html
statics/css/: index.css
statics/js/: index.js
templates/: template.html
